TAG: entrezgeneload-6-0-17-3
TAG: entrezgeneload-6-0-17-2
DATE: 06/08/2021, 06/15/2021
STAFF: lec
CHANGES:
wts2-631/dataloads/cleanup: set accession ids to private=0 (make public)

TAG: entrezgeneload -6-0-17-1
DATE: 05/11/2021
STAFF: sc
CHANGES: TR13349 Build39

TAG: entrezgeneload-6-0-16-1
DATE: 08/21/2020
STAFF: lec
TR13204/Infrastructure Release

TAG: entrezgeneload-6-0-14-2
DATE: 05/06/2019
STAFF: lec 
TR13111/mrk_marker/cmOffset added

TAG: entrezgeneload-6-0-14-1
DATE: 04/03/2019
STAFF: lec 
TR12963/teleuse-to-mgd_java_api

TAG: entrezgeneload-6-0-11-4
TAG: entrezgeneload-6-0-11-3
TAG: entrezgeneload-6-0-11-2
DATE: 01/18/2018
STAFF: lec 
CHANGES: 
TR12746/zebrafish/add ZFIN:ZDB:xxxx ids

TAG: entrezgeneload-6-0-11-1
DATE: 11/28/2017
STAFF: lec 
CHANGES: 
TR12662/GMC/driver notes
deleteIDs.csh : add check for MGI_Relationship._Category_key = 1006

TAG: entrezgeneload-6-0-10-1
DATE: 04/27/2017
STAFF: lec 
CHANGES: 
TR12540/Disease Ontology (DO) All The Way
human/createBuckets.csh : load mimIDs into WRK tables with 'OMIM:' prefix

TAG: entrezgeneload-6-0-8-1
DATE: 03/01/2017
STAFF: lec 
CHANGES: 
TR12427/Disease Ontology (DO)

TAG: entrezgeneload-6-0-7-2
DATE: 02/08/2017
STAFF: lec 
CHANGES:
1) TR12497/Remove obsolete RefSet/SUPPRESSED from EntrezGene

TAG: entrezgeneload-6-0-7-1
DATE: 01/05/2017
STAFF: lec 
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: entrezgeneload-6-0-6-1
DATE: 09/22/2016
STAFF: lec 
CHANGES: 
1) annottype = "OMIM/Human Marker/Pheno" is obsolete/removed
human/annotations.sh, annotations.py

TAG: entrezgeneload-6-0-4-1
DATE: 04/27/2016
STAFF: lec 
CHANGES: TR12069/postgres cleanup
1) convert to Git 
2) add "db.setAutoTranslate"

TAG: entrezgeneload-6-0-0-4
DATE: 08/31/2015
STAFF: lec
CHANGES:
1) TR12083/mrk_marker/_curationstate_key/obsolet

TAG: entrezgeneload-6-0-0-3
DATE: 08/18/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: entrezgeneload-6-0-0-2
TAG: entrezgeneload-6-0-0-1
DATE: 07/23/2015
STAFF: lec
CHANGES: