@@ -1,3 +1,10 @@
+TAG: entrezgeneload-6-0-21-1
+DATE: 07/21/2022
+STAFF: lec
+CHANGES:
+wts2-646/Switch load of Human gene to disease associations to use the Alliance file.
+human/annotations.py is now using Alliance input file
+
 TAG: entrezgeneload-6-0-17-3
 TAG: entrezgeneload-6-0-17-2
 DATE: 06/08/2021, 06/15/2021
